# lantern

./: Cargo.toml  PLAN.md  README.md
.github/: FUNDING.yml
baselines/: collections.txt
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  constant.rs  function.rs  instruction.rs  lib.rs  opcode.rs  scope_tree.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/emit/: Cargo.toml
crates/emit/src/: lib.rs  lua_emitter.rs  type_info.rs
crates/emit/src/lua_emitter/: exprs.rs  hoisting.rs  mod.rs  precedence.rs  stmts.rs
crates/exprs/: Cargo.toml
crates/exprs/src/: branch_inline.rs  inline.rs  lib.rs  multi_return.rs  split_temps.rs  table_fold.rs
crates/hir/: Cargo.toml
crates/hir/src/: arena.rs  cfg.rs  expr.rs  func.rs  lib.rs  stmt.rs  timing.rs  types.rs  var.rs
crates/lantern/: Cargo.toml
crates/lantern/src/: lib.rs
crates/lift/: Cargo.toml
crates/lift/src/: block_discovery.rs  bool_regions.rs  lib.rs  lifter.rs
crates/lift/src/bool_regions/: and_or_ternary.rs  bool_region.rs  mod.rs  truthy_chain.rs  utils.rs  value_ternary.rs
crates/patterns/: Cargo.toml
crates/patterns/src/: lib.rs
crates/structure/: Cargo.toml
crates/structure/src/: lib.rs  patterns.rs  structurer.rs
crates/vars/: Cargo.toml
crates/vars/src/: collector.rs  lib.rs  solver.rs  union_find.rs
crates/verify/: Cargo.toml
crates/verify/corpus/: roundtrip_passing.txt
crates/verify/src/: analyze.rs  diff_exec.rs  generator.rs  lib.rs  main.rs  normalize.rs  regressions.rs  roundtrip.rs
scripts/: corpus_test.sh
(+64 files in other folders)
